# projectshizuku

./: LICENSE  README.md  package-lock.json  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: anilist.rs
src-tauri/src/db/: mod.rs
src-tauri/src/providers/: allanime.rs
